<resources>
    <string name="app_name">Food Recipes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="recipes_fragment_menu_title">Recipes</string>
    <string name="favorite_recipes_fragment_menu_title">Favorites</string>
    <string name="food_joke_menu_title">Joke</string>
    <string name="restaurant_floating_button_description">Restaurant floating button</string>
    <string name="connection_error_icon">Connection error icon</string>
    <string name="connection_error_text">No internet connection</string>
    <string name="favorite_recipe_icon_description">Favorite recipe icon</string>
    <string name="recipe_clock_icon_description">Recipe clock icon</string>
    <string name="recipe_vegan_icon_description">Recipe vegan icon</string>
    <string name="vegan_item_text">vegan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_type_text">Meal Type</string>
    <string name="main_course_chip_text">Main Course</string>
    <string name="side_dish_chip_text">Side Dish</string>
    <string name="dessert_chip_text">Dessert</string>
    <string name="appetizer_chip_text">Appetizer</string>
    <string name="salad_chip_text">Salad</string>
    <string name="bread_chip_text">Bread</string>
    <string name="breakfast_chip_text">Breakfast</string>
    <string name="soup_chip_text">Soup</string>
    <string name="beverage_chip_text">Beverage</string>
    <string name="sauce_chip_text">Sauce</string>
    <string name="marinade_chip_text">Marinade</string>
    <string name="fingerfood_chip_text">Fingerfood</string>
    <string name="snack_chip_text">Snack</string>
    <string name="drink_chip_text">Drink</string>
    <string name="diet_type_text">Diet Type</string>
    <string name="gluten_free_chip_text">Gluten Free</string>
    <string name="ketogenic_chip_text">Ketogenic</string>
    <string name="vegetarian_chip_text">Vegetarian</string>
    <string name="vegan_chip_text">Vegan</string>
    <string name="pescetarian_chip_text">Pescetarian</string>
    <string name="primal_chip_text">Primal</string>
    <string name="low_fodmap_chip_text">Low FODMAP</string>
    <string name="whole30_chip_text">Whole 30</string>
    <string name="apply_button_text">Apply</string>
    <string name="ic_search_title">Search</string>
    <string name="overview_vegetarian_option_title">Vegetarian</string>
    <string name="overview_vegetarian_option_description">Vegetarian option icon</string>
    <string name="overview_vegan_option_title">Vegan</string>
    <string name="overview_vegan_option_description">Vegan option icon</string>
    <string name="overview_gluten_free_icon_description">Gluten Free icon</string>
    <string name="overview_gluten_free_title">Gluten Free</string>
    <string name="overview_dairy_free_icon_description">Dairy Free icon</string>
    <string name="overview_dairy_free_title">Dairy Free</string>
    <string name="overview_healthy_icon_description">Healthy icon</string>
    <string name="overview_healthy_title">Healthy</string>
    <string name="overview_cheap_healthy_icon_description">Cheap healthy icon</string>
    <string name="overview_cheap_title">Cheap</string>
    <string name="overview_likes_icon_description">Likes icon</string>
    <string name="overview_time_icon_description">Time icon</string>
    <string name="overview_image_icon_description">Overview image icon</string>
    <string name="ingredient_picture_description">Ingredient picture</string>
    <string name="favorites_menu_item_title">Save to Favorites</string>
    <string name="no_favorite_recipes">No Favorite Recipes</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="food_joke_sample">Food is very good</string>
    <string name="share_food_joke_menu_item">Share</string>
</resources>